# background_remover_web

./: .gitignore  backend.spec  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
backend/: image_processor.py  main.py  sidecar_main.py
backend/routes/: process.py
backend/utils/: file_handling.py
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: build-sidecar.ps1  build-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_api.py
